--- a/Jsons/language/en.json
+++ b/Jsons/language/en.json
@@ -14,34 +14,6 @@
   "lg_ja": "Japanese",
   "lg_hi": "Hindi",
   "lg_zh": "Chinese",
-  "unit_billion": "B",
-  "unit_million": "M",
-  "unit_thousand": "K",
-  "month_long01": "January",
-  "month_long02": "February",
-  "month_long03": "March",
-  "month_long04": "April",
-  "month_long05": "May",
-  "month_long06": "June",
-  "month_long07": "July",
-  "month_long08": "August",
-  "month_long09": "September",
-  "month_long10": "October",
-  "month_long11": "November",
-  "month_long12": "December",
-  "month_short01": "Jan",
-  "month_short02": "Feb",
-  "month_short03": "Mar",
-  "month_short04": "Apr",
-  "month_short05": "May",
-  "month_short06": "Jun",
-  "month_short07": "Jul",
-  "month_short08": "Aug",
-  "month_short09": "Sep",
-  "month_short10": "Oct",
-  "month_short11": "Nov",
-  "month_short12": "Dec",
-  "trello": "Trello",
   "source": "source",
   "version": "version",
   "account_normal": "Normal Account",
@@ -60,11 +32,11 @@
   "database_show": "Show database",
   "load": "Load Panels and Boxes",
   "cosmos_show": "Toggle Background",
-  "cat_science": "Science",
-  "cat_power": "Power",
-  "cat_culture": "Culture",
-  "cat_trade": "Trade",
   "cat_being": "Being",
+  "cat_culture": "Culture",
+  "cat_power": "Power",
+  "cat_science": "Science",
+  "cat_trade": "Trade",
   "settings": "Settings",
   "wikipedia": "Wikipedia",
   "toggle_wsbackgd": "Background",
@@ -93,6 +65,11 @@
   "cred_backend": "Cloud God: ",
   "cred_wikipedia": "Wikipedia Wizard: Sabat",
   "cred_project": "Mindfulness: Pierre",
+  "cred_sideral_guru": "Sideral Guru: Caro",
+  "settings_source": "Source",
+  "settings_sources": "Sources",
+  "settings_academy": "Academy",
+  "source_wikipedia_label": "Wikipedia",
   "source_baidubaike": "Baidu Baike",
   "source_britannica": "Britannica",
   "source_citizendium": "Citizendium",
@@ -332,5 +309,27 @@
   "tv_1990s_wikipedia": "1990s",
   "tv_2000s_wikipedia": "2000s",
   "tv_2010s_wikipedia": "2010s",
-  "tv_2020s_wikipedia": "2020s"
+  "tv_2020s_wikipedia": "2020s",
+  "account_login": "Login",
+  "account_email": "Email",
+  "account_email_placeholder": "Enter your email",
+  "account_password": "Password",
+  "account_password_placeholder": "Enter your password",
+  "account_login_not_implemented": "Login functionality not implemented yet",
+  "account_password_reset_not_implemented": "Password reset functionality not implemented yet",
+  "account_forgot_password": "Forgot password?",
+  "settings_parameters": "Parameters",
+  "settings_time": "Time",
+  "settings_timeviews": "Timeviews",
+  "settings_timeline": "Timeline",
+  "settings_timeline_size": "Size",
+  "settings_categories": "Categories",
+  "settings_categories_all": "All",
+  "settings_region": "Region",
+  "settings_region_system": "system",
+  "settings_region_custom": "custom",
+  "region_date": "Date",
+  "region_numbers": "Numbers",
+  "region_years": "Years",
+  "region_week_starts": "Week starts"
 }
