--- a/Jsons/language/es.json
+++ b/Jsons/language/es.json
@@ -14,34 +14,6 @@
   "lg_ja": "japonés",
   "lg_hi": "hindi",
   "lg_zh": "Chino",
-  "unit_billion": "MM",
-  "unit_million": "M",
-  "unit_thousand": "k",
-  "month_long01": "Enero",
-  "month_long02": "Febrero",
-  "month_long03": "Marzo",
-  "month_long04": "Abril",
-  "month_long05": "Puede",
-  "month_long06": "Junio",
-  "month_long07": "Julio",
-  "month_long08": "Agosto",
-  "month_long09": "Septiembre",
-  "month_long10": "Octubre",
-  "month_long11": "Noviembre",
-  "month_long12": "Diciembre",
-  "month_short01": "Ene",
-  "month_short02": "Feb",
-  "month_short03": "Mar",
-  "month_short04": "Abr",
-  "month_short05": "Puede",
-  "month_short06": "Jun",
-  "month_short07": "Jul",
-  "month_short08": "Ago",
-  "month_short09": "Sep",
-  "month_short10": "Oct",
-  "month_short11": "Nov",
-  "month_short12": "Dic",
-  "trello": "Trello",
   "source": "fuente",
   "version": "versión",
   "account_normal": "Cuenta normal",
@@ -60,11 +32,11 @@
   "database_show": "Mostrar base de datos",
   "load": "Paneles y cajas de carga",
   "cosmos_show": "Cambiar fondo",
-  "cat_science": "Ciencia",
-  "cat_power": "Fuerza",
-  "cat_culture": "Cultura",
-  "cat_trade": "Comercio",
   "cat_being": "Ser",
+  "cat_culture": "Cultura",
+  "cat_power": "Fuerza",
+  "cat_science": "Ciencia",
+  "cat_trade": "Comercio",
   "settings": "Ajustes",
   "wikipedia": "Wikipedia",
   "toggle_wsbackgd": "Fondo",
@@ -93,6 +65,11 @@
   "cred_backend": "Dios de la nube:",
   "cred_wikipedia": "Asistente de Wikipedia: Sabat",
   "cred_project": "Atención plena: Pierre",
+  "cred_sideral_guru": "Gurú Sideral: Caro",
+  "settings_source": "Fuente",
+  "settings_sources": "Fuentes",
+  "settings_academy": "Academia",
+  "source_wikipedia_label": "Wikipedia",
   "source_baidubaike": "Baidu Baike",
   "source_britannica": "Británica",
   "source_citizendium": "Ciudadano",
@@ -332,5 +309,27 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "account_login": "Acceso",
+  "account_email": "Correo electrónico",
+  "account_email_placeholder": "Introduce tu correo electrónico",
+  "account_password": "Contraseña",
+  "account_password_placeholder": "Ingrese su contraseña",
+  "account_login_not_implemented": "La funcionalidad de inicio de sesión aún no se ha implementado",
+  "account_password_reset_not_implemented": "La funcionalidad de restablecimiento de contraseña aún no está implementada",
+  "account_forgot_password": "¿Has olvidado tu contraseña?",
+  "settings_parameters": "Parámetros",
+  "settings_time": "Tiempo",
+  "settings_timeviews": "Vistas de tiempo",
+  "settings_timeline": "Cronología",
+  "settings_timeline_size": "Tamaño",
+  "settings_categories": "Categorías",
+  "settings_categories_all": "Todo",
+  "settings_region": "Región",
+  "settings_region_system": "sistema",
+  "settings_region_custom": "costumbre",
+  "region_date": "Fecha",
+  "region_numbers": "Números",
+  "region_years": "Años",
+  "region_week_starts": "La semana comienza"
 }
