--- a/Jsons/language/fr.json
+++ b/Jsons/language/fr.json
@@ -14,34 +14,6 @@
   "lg_ja": "Japonais",
   "lg_hi": "Hindi",
   "lg_zh": "Chinois",
-  "unit_billion": "Md",
-  "unit_million": "M",
-  "unit_thousand": "k",
-  "month_long01": "Janvier",
-  "month_long02": "Février",
-  "month_long03": "Mars",
-  "month_long04": "Avril",
-  "month_long05": "Mai",
-  "month_long06": "Juin",
-  "month_long07": "Juillet",
-  "month_long08": "Août",
-  "month_long09": "Septembre",
-  "month_long10": "Octobre",
-  "month_long11": "Novembre",
-  "month_long12": "Décembre",
-  "month_short01": "Jan",
-  "month_short02": "Fév",
-  "month_short03": "Mar",
-  "month_short04": "Avr",
-  "month_short05": "Mai",
-  "month_short06": "Jun",
-  "month_short07": "Jul",
-  "month_short08": "Août",
-  "month_short09": "Sep",
-  "month_short10": "Oct",
-  "month_short11": "Nov",
-  "month_short12": "Déc",
-  "trello": "Trello",
   "source": "source",
   "version": "version",
   "account_normal": "Compte normal",
@@ -60,11 +32,11 @@
   "database_show": "Afficher la base de données",
   "load": "Panneaux et boîtes de chargement",
   "cosmos_show": "Basculer l'arrière-plan",
-  "cat_science": "Science",
-  "cat_power": "Pouvoir",
-  "cat_culture": "Culture",
-  "cat_trade": "Commerce",
   "cat_being": "Être",
+  "cat_culture": "Culture",
+  "cat_power": "Pouvoir",
+  "cat_science": "Science",
+  "cat_trade": "Commerce",
   "settings": "Paramètres",
   "wikipedia": "Wikipédia",
   "toggle_wsbackgd": "Arrière-plan",
@@ -93,6 +65,11 @@
   "cred_backend": "Dieu des nuages ​​: ",
   "cred_wikipedia": "Sorcier de Wikipédia : Sabat",
   "cred_project": "Pleine conscience : Pierre",
+  "cred_sideral_guru": "Guru Sidéral : Caro",
+  "settings_source": "Source",
+  "settings_sources": "Sources",
+  "settings_academy": "Académie",
+  "source_wikipedia_label": "Wikipédia",
   "source_baidubaike": "Baidu Baike",
   "source_britannica": "Britannica",
   "source_citizendium": "Citizendium",
@@ -118,7 +95,7 @@
   "cal_ethiopian": "éthiopien",
   "cal_hebrew": "hébreu",
   "cal_balinese": "Balinais",
-  "cal_creationist": "Créationniste",
+  "cal_creationist": "créationniste",
   "cal_gregorian_explanation": "Calendrier solaire, 12 mois, 365-366 jours, introduit par le pape Grégoire XIII en 1582.",
   "cal_islamic_explanation": "Calendrier lunaire, 12 mois, 354-355 jours, commence avec la migration de Mahomet à Médine (622 CE).",
   "cal_chinese_explanation": "Calendrier luni-solaire, combinant les mois lunaires, l'année solaire et le cycle zodiacal de 12 ans. Utilisé pour les fêtes traditionnelles d'Asie de l'Est.",
@@ -133,7 +110,7 @@
   "cal_persian_usage": "Utilisation : 1,5 % (civil/culturel) - Calendrier officiel en Iran (~89 millions) et en Afghanistan (~41 millions).",
   "cal_balinese_usage": "Utilisation : 1,5 % (civil) - Officiel en Éthiopie (~126 millions) et utilisé en Érythrée.",
   "cal_hebrew_usage": "Utilisation : 0,2 % (religieux) - Utilisé par les communautés juives (~16 millions de personnes) à des fins religieuses.",
-  "cal_ethiopian_usage": "Usage : <0,1 % (culturel) - Principalement utilisé à Bali (Indonésie), par environ 4,5 millions de personnes.",
+  "cal_ethiopian_usage": "Usage : <0,1 % (culturel) - Principalement utilisé à Bali (Indonésie), environ 4,5 millions de personnes.",
   "cal_creationist_usage": "Utilisation : <0,01 % (niche) - Utilisé par quelques communautés chrétiennes fondamentalistes.",
   "tv_universe": "Univers",
   "tv_life": "Vie",
@@ -332,5 +309,27 @@
   "tv_1990s_wikipedia": "Années_1990",
   "tv_2000s_wikipedia": "Années_2000",
   "tv_2010s_wikipedia": "Années_2010",
-  "tv_2020s_wikipedia": "Années_2020"
+  "tv_2020s_wikipedia": "Années_2020",
+  "account_login": "Account.tsx",
+  "account_email": "Account.tsx",
+  "account_email_placeholder": "Account.tsx",
+  "account_password": "Account.tsx",
+  "account_password_placeholder": "Account.tsx",
+  "account_login_not_implemented": "Account.tsx",
+  "account_password_reset_not_implemented": "Account.tsx",
+  "account_forgot_password": "Account.tsx",
+  "settings_parameters": "SettingsParameters.tsx",
+  "settings_time": "SettingsTime.tsx",
+  "settings_timeviews": "SettingsTime.tsx",
+  "settings_timeline": "SettingsTime.tsx",
+  "settings_timeline_size": "SettingsTime.tsx",
+  "settings_categories": "SettingsTime.tsx",
+  "settings_categories_all": "SettingsTime.tsx",
+  "settings_region": "SettingsTime.tsx",
+  "settings_region_system": "SettingsTime.tsx",
+  "settings_region_custom": "SettingsTime.tsx",
+  "region_date": "TimeRegion.tsx",
+  "region_numbers": "TimeRegion.tsx",
+  "region_years": "TimeRegion.tsx",
+  "region_week_starts": "TimeRegion.tsx"
 }
