--- a/Jsons/language/hi.json
+++ b/Jsons/language/hi.json
@@ -14,34 +14,6 @@
   "lg_ja": "जापानी",
   "lg_hi": "हिंदी",
   "lg_zh": "चीनी",
-  "unit_billion": "अ",
-  "unit_million": "द",
-  "unit_thousand": "ह",
-  "month_long01": "जनवरी",
-  "month_long02": "फ़रवरी",
-  "month_long03": "मार्च",
-  "month_long04": "अप्रैल",
-  "month_long05": "मई",
-  "month_long06": "जून",
-  "month_long07": "जुलाई",
-  "month_long08": "अगस्त",
-  "month_long09": "सितम्बर",
-  "month_long10": "अक्टूबर",
-  "month_long11": "नवंबर",
-  "month_long12": "दिसंबर",
-  "month_short01": "हज़ार",
-  "month_short02": "जनवरी",
-  "month_short03": "फ़रवरी",
-  "month_short04": "मार्च",
-  "month_short05": "अप्रैल",
-  "month_short06": "मई",
-  "month_short07": "जून",
-  "month_short08": "जुलाई",
-  "month_short09": "अगस्त",
-  "month_short10": "सितम्बर",
-  "month_short11": "अक्टूबर",
-  "month_short12": "नवंबर",
-  "trello": "Trello",
   "source": "स्रोत",
   "version": "संस्करण",
   "account_normal": "सामान्य खाता",
@@ -60,11 +32,11 @@
   "database_show": "डेटाबेस दिखाएँ",
   "load": "लोड पैनल और बॉक्स",
   "cosmos_show": "पृष्ठभूमि को टॉगल करें",
-  "cat_science": "विज्ञान",
-  "cat_power": "शक्ति",
-  "cat_culture": "संस्कृति",
-  "cat_trade": "व्यापार",
   "cat_being": "प्राणी",
+  "cat_culture": "संस्कृति",
+  "cat_power": "शक्ति",
+  "cat_science": "विज्ञान",
+  "cat_trade": "व्यापार",
   "settings": "सेटिंग्स",
   "wikipedia": "विकिपीडिया",
   "toggle_wsbackgd": "पृष्ठभूमि",
@@ -93,6 +65,11 @@
   "cred_backend": "बादल देवता:",
   "cred_wikipedia": "विकिपीडिया विज़ार्ड: सबैट",
   "cred_project": "ध्यान: पियरे",
+  "cred_sideral_guru": "साइडरल गुरु: कैरो",
+  "settings_source": "स्रोत",
+  "settings_sources": "सूत्रों का कहना है",
+  "settings_academy": "अकादमी",
+  "source_wikipedia_label": "विकिपीडिया",
   "source_baidubaike": "Baidu Baike",
   "source_britannica": "ब्रिटानिका",
   "source_citizendium": "सिटिज़नडियम",
@@ -332,5 +309,27 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "account_login": "लॉग इन करें",
+  "account_email": "ईमेल",
+  "account_email_placeholder": "अपना ईमेल दर्ज करें",
+  "account_password": "पासवर्ड",
+  "account_password_placeholder": "अपना कूटशब्द भरें",
+  "account_login_not_implemented": "लॉगिन सुविधा अभी तक लागू नहीं की गई है",
+  "account_password_reset_not_implemented": "पासवर्ड रीसेट करने की सुविधा अभी तक लागू नहीं की गई है।",
+  "account_forgot_password": "पासवर्ड भूल गए?",
+  "settings_parameters": "पैरामीटर",
+  "settings_time": "समय",
+  "settings_timeviews": "समय दृश्य",
+  "settings_timeline": "समय",
+  "settings_timeline_size": "आकार",
+  "settings_categories": "श्रेणियाँ",
+  "settings_categories_all": "सभी",
+  "settings_region": "क्षेत्र",
+  "settings_region_system": "प्रणाली",
+  "settings_region_custom": "रिवाज़",
+  "region_date": "तारीख",
+  "region_numbers": "नंबर",
+  "region_years": "साल",
+  "region_week_starts": "सप्ताह शुरू होता है"
 }
