--- a/Jsons/language/it.json
+++ b/Jsons/language/it.json
@@ -14,34 +14,6 @@
   "lg_ja": "giapponese",
   "lg_hi": "hindi",
   "lg_zh": "cinese",
-  "unit_billion": "Md",
-  "unit_million": "Mn",
-  "unit_thousand": "k",
-  "month_long01": "Gennaio",
-  "month_long02": "Febbraio",
-  "month_long03": "Marzo",
-  "month_long04": "aprile",
-  "month_long05": "Maggio",
-  "month_long06": "Giugno",
-  "month_long07": "Luglio",
-  "month_long08": "agosto",
-  "month_long09": "settembre",
-  "month_long10": "ottobre",
-  "month_long11": "novembre",
-  "month_long12": "Dicembre",
-  "month_short01": "gennaio",
-  "month_short02": "Febbraio",
-  "month_short03": "Marzo",
-  "month_short04": "aprile",
-  "month_short05": "Maggio",
-  "month_short06": "giugno",
-  "month_short07": "luglio",
-  "month_short08": "agosto",
-  "month_short09": "Settembre",
-  "month_short10": "ottobre",
-  "month_short11": "novembre",
-  "month_short12": "Dicembre",
-  "trello": "Trello",
   "source": "fonte",
   "version": "versione",
   "account_normal": "Conto normale",
@@ -60,11 +32,11 @@
   "database_show": "Mostra database",
   "load": "Pannelli e scatole di carico",
   "cosmos_show": "Attiva/disattiva sfondo",
-  "cat_science": "Scienza",
-  "cat_power": "Energia",
-  "cat_culture": "Cultura",
-  "cat_trade": "Commercio",
   "cat_being": "Essendo",
+  "cat_culture": "Cultura",
+  "cat_power": "Energia",
+  "cat_science": "Scienza",
+  "cat_trade": "Commercio",
   "settings": "Impostazioni",
   "wikipedia": "Wikipedia",
   "toggle_wsbackgd": "Sfondo",
@@ -93,6 +65,11 @@
   "cred_backend": "Dio delle nuvole:",
   "cred_wikipedia": "Wikipedia Wizard: Sabat",
   "cred_project": "Consapevolezza: Pierre",
+  "cred_sideral_guru": "Guru Siderale: Caro",
+  "settings_source": "Fonte",
+  "settings_sources": "Fonti",
+  "settings_academy": "Accademia",
+  "source_wikipedia_label": "Wikipedia",
   "source_baidubaike": "Baidu Baike",
   "source_britannica": "Britannica",
   "source_citizendium": "Citizendium",
@@ -332,5 +309,27 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "account_login": "Login",
+  "account_email": "E-mail",
+  "account_email_placeholder": "Inserisci la tua email",
+  "account_password": "Password",
+  "account_password_placeholder": "Inserisci la tua password",
+  "account_login_not_implemented": "Funzionalità di accesso non ancora implementata",
+  "account_password_reset_not_implemented": "La funzionalità di reimpostazione della password non è ancora implementata",
+  "account_forgot_password": "Ha dimenticato la password?",
+  "settings_parameters": "Parametri",
+  "settings_time": "Tempo",
+  "settings_timeviews": "Visualizzazioni temporali",
+  "settings_timeline": "Cronologia",
+  "settings_timeline_size": "Misurare",
+  "settings_categories": "Categorie",
+  "settings_categories_all": "Tutto",
+  "settings_region": "Regione",
+  "settings_region_system": "sistema",
+  "settings_region_custom": "costume",
+  "region_date": "Data",
+  "region_numbers": "Numeri",
+  "region_years": "Anni",
+  "region_week_starts": "La settimana inizia"
 }
