--- a/Jsons/language/ja.json
+++ b/Jsons/language/ja.json
@@ -14,34 +14,6 @@
   "lg_ja": "日本語",
   "lg_hi": "ヒンディー語",
   "lg_zh": "中国語",
-  "unit_billion": "十",
-  "unit_million": "百",
-  "unit_thousand": "千",
-  "month_long01": "1月",
-  "month_long02": "2月",
-  "month_long03": "行進",
-  "month_long04": "4月",
-  "month_long05": "5月",
-  "month_long06": "6月",
-  "month_long07": "7月",
-  "month_long08": "8月",
-  "month_long09": "9月",
-  "month_long10": "10月",
-  "month_long11": "11月",
-  "month_long12": "12月",
-  "month_short01": "千",
-  "month_short02": "1月",
-  "month_short03": "2月",
-  "month_short04": "行進",
-  "month_short05": "4月",
-  "month_short06": "5月",
-  "month_short07": "6月",
-  "month_short08": "7月",
-  "month_short09": "8月",
-  "month_short10": "9月",
-  "month_short11": "10月",
-  "month_short12": "11月",
-  "trello": "トレロ",
   "source": "ソース",
   "version": "バージョン",
   "account_normal": "通常アカウント",
@@ -50,7 +22,7 @@
   "toggle_vh": "垂直/水平を切り替える",
   "timeview_edition": "タイムビュー",
   "search_show": "検索",
-  "timeview1_show": "メインタイムビューを表示/非表示",
+  "timeview1_show": "メインタイムビューの表示/非表示",
   "timeview2_show": "代替タイムビューの表示/非表示",
   "timeview3_show": "代替タイムビューの表示/非表示",
   "timeview1_set": "メインタイムビューを編集",
@@ -60,11 +32,11 @@
   "database_show": "データベースを表示",
   "load": "パネルとボックスを積載する",
   "cosmos_show": "背景を切り替える",
-  "cat_science": "科学",
-  "cat_power": "力",
-  "cat_culture": "文化",
-  "cat_trade": "貿易",
   "cat_being": "いる",
+  "cat_culture": "文化",
+  "cat_power": "力",
+  "cat_science": "科学",
+  "cat_trade": "貿易",
   "settings": "設定",
   "wikipedia": "ウィキペディア",
   "toggle_wsbackgd": "背景",
@@ -93,6 +65,11 @@
   "cred_backend": "雲神：",
   "cred_wikipedia": "Wikipediaウィザード：サバト",
   "cred_project": "マインドフルネス：ピエール",
+  "cred_sideral_guru": "シデラル・グル：カロ",
+  "settings_source": "ソース",
+  "settings_sources": "出典",
+  "settings_academy": "アカデミー",
+  "source_wikipedia_label": "ウィキペディア",
   "source_baidubaike": "百度白科",
   "source_britannica": "ブリタニカ",
   "source_citizendium": "シチズンディウム",
@@ -128,7 +105,7 @@
   "cal_ethiopian_explanation": "太陽暦、13 か月 (30 日が 12 か月、5 ～ 6 日が 1 か月)、グレゴリオ暦より 7 ～ 8 年遅れています。",
   "cal_creationist_explanation": "年代順の枠組みで、聖書の系図から地球の年齢を計算し、創造を 6,000 ～ 10,000 年前に位置付けます。",
   "cal_gregorian_usage": "使用率: 95% (公式) - ほぼすべての国で公式および経済目的で民間暦として使用されています。",
-  "cal_islamic_usage": "使用率: 24% (宗教的) - 約 20 億人のイスラム教徒 (世界の約 24%) が主に宗教上の祝日 (ラマダン、ハッジなど) に遵守します。",
+  "cal_islamic_usage": "使用率: 24% (宗教的) - 約 20 億人のイスラム教徒 (世界の約 24%) が主に宗教上の祝日 (ラマダン、ハッジなど) に実施します。",
   "cal_chinese_usage": "使用率: 18% (文化的) - 旧正月などの祭りで約 14 億人の中国人がこれを祝います。",
   "cal_persian_usage": "使用率: 1.5% (民間/文化) - イラン (~8,900 万) とアフガニスタン (~4,100 万) の公式カレンダー。",
   "cal_balinese_usage": "使用率: 1.5% (民間) - エチオピア(~126M)で公用語、エリトリアで使用。",
@@ -332,5 +309,27 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "account_login": "ログイン",
+  "account_email": "メール",
+  "account_email_placeholder": "メールアドレスを入力してください",
+  "account_password": "パスワード",
+  "account_password_placeholder": "パスワードを入力してください",
+  "account_login_not_implemented": "ログイン機能はまだ実装されていません",
+  "account_password_reset_not_implemented": "パスワードリセット機能はまだ実装されていません",
+  "account_forgot_password": "パスワードをお忘れですか？",
+  "settings_parameters": "パラメータ",
+  "settings_time": "時間",
+  "settings_timeviews": "タイムビュー",
+  "settings_timeline": "タイムライン",
+  "settings_timeline_size": "サイズ",
+  "settings_categories": "カテゴリー",
+  "settings_categories_all": "全て",
+  "settings_region": "地域",
+  "settings_region_system": "システム",
+  "settings_region_custom": "カスタム",
+  "region_date": "日付",
+  "region_numbers": "数字",
+  "region_years": "年",
+  "region_week_starts": "週の始まり"
 }
