--- a/Jsons/language/nl.json
+++ b/Jsons/language/nl.json
@@ -14,34 +14,6 @@
   "lg_ja": "Japanse",
   "lg_hi": "Hindi",
   "lg_zh": "Chinese",
-  "unit_billion": "Md",
-  "unit_million": "Mn",
-  "unit_thousand": "D",
-  "month_long01": "Januari",
-  "month_long02": "Februari",
-  "month_long03": "Maart",
-  "month_long04": "april",
-  "month_long05": "Kunnen",
-  "month_long06": "juni",
-  "month_long07": "juli",
-  "month_long08": "augustus",
-  "month_long09": "september",
-  "month_long10": "oktober",
-  "month_long11": "november",
-  "month_long12": "December",
-  "month_short01": "Jan",
-  "month_short02": "februari",
-  "month_short03": "Mar",
-  "month_short04": "april",
-  "month_short05": "Kunnen",
-  "month_short06": "juni",
-  "month_short07": "juli",
-  "month_short08": "Aug",
-  "month_short09": "Sep",
-  "month_short10": "oktober",
-  "month_short11": "nov",
-  "month_short12": "Dec",
-  "trello": "Trello",
   "source": "bron",
   "version": "versie",
   "account_normal": "Normale rekening",
@@ -60,11 +32,11 @@
   "database_show": "Toon database",
   "load": "Laadpanelen en -dozen",
   "cosmos_show": "Achtergrond weergeven/verbergen",
-  "cat_science": "Wetenschap",
-  "cat_power": "Stroom",
-  "cat_culture": "Cultuur",
-  "cat_trade": "Handel",
   "cat_being": "Wezen",
+  "cat_culture": "Cultuur",
+  "cat_power": "Stroom",
+  "cat_science": "Wetenschap",
+  "cat_trade": "Handel",
   "settings": "Instellingen",
   "wikipedia": "Wikipedia",
   "toggle_wsbackgd": "Achtergrond",
@@ -93,6 +65,11 @@
   "cred_backend": "Wolkengod:",
   "cred_wikipedia": "Wikipedia-tovenaar: Sabat",
   "cred_project": "Mindfulness: Pierre",
+  "cred_sideral_guru": "Siderale goeroe: Caro",
+  "settings_source": "Bron",
+  "settings_sources": "Bronnen",
+  "settings_academy": "Academie",
+  "source_wikipedia_label": "Wikipedia",
   "source_baidubaike": "Baidu Baike",
   "source_britannica": "Britannica",
   "source_citizendium": "Citizendium",
@@ -125,7 +102,7 @@
   "cal_persian_explanation": "De zonnekalender, die 365-366 dagen duurt, begint bij de lente-equinox (Nowruz).",
   "cal_balinese_explanation": "Een kalendersysteem dat gelijktijdige cycli combineert, waaronder een Pawukon-kalender van 210 dagen. Gebruikt voor religieuze ceremonies.",
   "cal_hebrew_explanation": "De lunisolaire kalender, met 12-13 maanden, begint bij de schepping (3761 v.Chr.). Deze wordt gebruikt voor religieuze plechtigheden.",
-  "cal_ethiopian_explanation": "De zonnekalender telt 13 maanden (12 van 30 dagen en 1 van 5-6 dagen) en loopt 7-8 jaar achter op de Gregoriaanse kalender.",
+  "cal_ethiopian_explanation": "De zonnekalender telt 13 maanden (12 van 30 dagen en 1 van 5-6 dagen), en loopt 7-8 jaar achter op de Gregoriaanse kalender.",
   "cal_creationist_explanation": "Het chronologische kader berekent de leeftijd van de aarde aan de hand van bijbelse geslachtsregisters en plaatst de schepping 6.000 tot 10.000 jaar geleden.",
   "cal_gregorian_usage": "Gebruik: 95% (officieel) - Wordt in bijna elk land gebruikt als burgerlijke kalender voor officiële en economische doeleinden.",
   "cal_islamic_usage": "Gebruik: 24% (religieus) - Wordt nageleefd door ongeveer 2 miljard moslims (ongeveer 24% van de wereldbevolking), voornamelijk tijdens religieuze feestdagen (Ramadan, Hajj, enz.).",
@@ -332,5 +309,27 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "account_login": "Login",
+  "account_email": "E-mail",
+  "account_email_placeholder": "Voer uw e-mailadres in",
+  "account_password": "Wachtwoord",
+  "account_password_placeholder": "Voer uw wachtwoord in",
+  "account_login_not_implemented": "De inlogfunctionaliteit is nog niet geïmplementeerd.",
+  "account_password_reset_not_implemented": "De functionaliteit voor het resetten van wachtwoorden is nog niet geïmplementeerd.",
+  "account_forgot_password": "Wachtwoord vergeten?",
+  "settings_parameters": "Parameters",
+  "settings_time": "Tijd",
+  "settings_timeviews": "Tijdsbeelden",
+  "settings_timeline": "Tijdlijn",
+  "settings_timeline_size": "Maat",
+  "settings_categories": "Categorieën",
+  "settings_categories_all": "Alle",
+  "settings_region": "Regio",
+  "settings_region_system": "systeem",
+  "settings_region_custom": "aangepast",
+  "region_date": "Datum",
+  "region_numbers": "Getallen",
+  "region_years": "Jaren",
+  "region_week_starts": "De week begint"
 }
