--- a/Jsons/language/pl.json
+++ b/Jsons/language/pl.json
@@ -14,34 +14,6 @@
   "lg_ja": "japoński",
   "lg_hi": "hinduski",
   "lg_zh": "chiński",
-  "unit_billion": "M",
-  "unit_million": "m",
-  "unit_thousand": "t",
-  "month_long01": "Styczeń",
-  "month_long02": "Luty",
-  "month_long03": "marzec",
-  "month_long04": "Kwiecień",
-  "month_long05": "Móc",
-  "month_long06": "Czerwiec",
-  "month_long07": "Lipiec",
-  "month_long08": "Sierpień",
-  "month_long09": "Wrzesień",
-  "month_long10": "Październik",
-  "month_long11": "Listopad",
-  "month_long12": "Grudzień",
-  "month_short01": "Jan",
-  "month_short02": "Luty",
-  "month_short03": "Zniszczyć",
-  "month_short04": "kwiecień",
-  "month_short05": "Móc",
-  "month_short06": "Czerwiec",
-  "month_short07": "Lipiec",
-  "month_short08": "Sierpień",
-  "month_short09": "Wrzesień",
-  "month_short10": "Październik",
-  "month_short11": "Listopad",
-  "month_short12": "Grudzień",
-  "trello": "Trello",
   "source": "źródło",
   "version": "wersja",
   "account_normal": "Konto normalne",
@@ -60,11 +32,11 @@
   "database_show": "Pokaż bazę danych",
   "load": "Panele i skrzynki ładunkowe",
   "cosmos_show": "Przełącz tło",
-  "cat_science": "Nauka",
-  "cat_power": "Moc",
-  "cat_culture": "Kultura",
-  "cat_trade": "Handel",
   "cat_being": "Istnienie",
+  "cat_culture": "Kultura",
+  "cat_power": "Moc",
+  "cat_science": "Nauka",
+  "cat_trade": "Handel",
   "settings": "Ustawienia",
   "wikipedia": "Wikipedia",
   "toggle_wsbackgd": "Tło",
@@ -93,6 +65,11 @@
   "cred_backend": "Bóg chmur:",
   "cred_wikipedia": "Czarodziej Wikipedii: Sabat",
   "cred_project": "Uważność: Pierre",
+  "cred_sideral_guru": "Sideral Guru: Caro",
+  "settings_source": "Źródło",
+  "settings_sources": "Źródła",
+  "settings_academy": "Akademia",
+  "source_wikipedia_label": "Wikipedia",
   "source_baidubaike": "Baidu Baike",
   "source_britannica": "Britannica",
   "source_citizendium": "Obywatelstwo",
@@ -332,5 +309,27 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "account_login": "Login",
+  "account_email": "E-mail",
+  "account_email_placeholder": "Podaj swój adres e-mail",
+  "account_password": "Hasło",
+  "account_password_placeholder": "Wprowadź swoje hasło",
+  "account_login_not_implemented": "Funkcjonalność logowania nie została jeszcze zaimplementowana",
+  "account_password_reset_not_implemented": "Funkcja resetowania hasła nie została jeszcze zaimplementowana",
+  "account_forgot_password": "Zapomniałeś hasła?",
+  "settings_parameters": "Parametry",
+  "settings_time": "Czas",
+  "settings_timeviews": "Widoki czasowe",
+  "settings_timeline": "Oś czasu",
+  "settings_timeline_size": "Rozmiar",
+  "settings_categories": "Kategorie",
+  "settings_categories_all": "Wszystko",
+  "settings_region": "Region",
+  "settings_region_system": "system",
+  "settings_region_custom": "zwyczaj",
+  "region_date": "Data",
+  "region_numbers": "Takty muzyczne",
+  "region_years": "Lata",
+  "region_week_starts": "Tydzień się zaczyna"
 }
