--- a/Jsons/language/ru.json
+++ b/Jsons/language/ru.json
@@ -14,34 +14,6 @@
   "lg_ja": "Японский",
   "lg_hi": "Хинди",
   "lg_zh": "Хинди",
-  "unit_billion": "д",
-  "unit_million": "н",
-  "unit_thousand": "т",
-  "month_long01": "Январь",
-  "month_long02": "Февраль",
-  "month_long03": "Маршировать",
-  "month_long04": "Апрель",
-  "month_long05": "Может",
-  "month_long06": "Июнь",
-  "month_long07": "Июль",
-  "month_long08": "Август",
-  "month_long09": "Сентябрь",
-  "month_long10": "Октябрь",
-  "month_long11": "Ноябрь",
-  "month_long12": "Декабрь",
-  "month_short01": "Янв",
-  "month_short02": "февраль",
-  "month_short03": "март",
-  "month_short04": "Апр",
-  "month_short05": "Может",
-  "month_short06": "Джун",
-  "month_short07": "июль",
-  "month_short08": "Август",
-  "month_short09": "Сентябрь",
-  "month_short10": "Октябрь",
-  "month_short11": "Ноябрь",
-  "month_short12": "Декабрь",
-  "trello": "Trello",
   "source": "источник",
   "version": "версия",
   "account_normal": "Обычный аккаунт",
@@ -60,11 +32,11 @@
   "database_show": "Показать базу данных",
   "load": "Загрузить панели и блоки",
   "cosmos_show": "Переключить фон",
-  "cat_science": "Наука",
-  "cat_power": "Власть",
-  "cat_culture": "Культура",
-  "cat_trade": "Торговля",
   "cat_being": "Существование",
+  "cat_culture": "Культура",
+  "cat_power": "Власть",
+  "cat_science": "Наука",
+  "cat_trade": "Торговля",
   "settings": "Настройки",
   "wikipedia": "Википедия",
   "toggle_wsbackgd": "Фон",
@@ -93,6 +65,11 @@
   "cred_backend": "Бог Облаков:",
   "cred_wikipedia": "Википедия Волшебник: Сабат",
   "cred_project": "Осознанность: Пьер",
+  "cred_sideral_guru": "Сидеральный Гуру: Каро",
+  "settings_source": "Источник",
+  "settings_sources": "Источники",
+  "settings_academy": "Академия",
+  "source_wikipedia_label": "Википедия",
   "source_baidubaike": "Байду Байке",
   "source_britannica": "Британника",
   "source_citizendium": "Гражданиндиум",
@@ -332,5 +309,27 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "account_login": "Авторизоваться",
+  "account_email": "Электронная почта",
+  "account_email_placeholder": "Введите свой адрес электронной почты",
+  "account_password": "Пароль",
+  "account_password_placeholder": "Введите свой пароль",
+  "account_login_not_implemented": "Функция авторизации пока не реализована.",
+  "account_password_reset_not_implemented": "Функция сброса пароля пока не реализована.",
+  "account_forgot_password": "Забыли пароль?",
+  "settings_parameters": "Параметры",
+  "settings_time": "Время",
+  "settings_timeviews": "Просмотры по времени",
+  "settings_timeline": "Хронология",
+  "settings_timeline_size": "Размер",
+  "settings_categories": "Категории",
+  "settings_categories_all": "Все",
+  "settings_region": "Область",
+  "settings_region_system": "система",
+  "settings_region_custom": "обычай",
+  "region_date": "Дата",
+  "region_numbers": "Числа",
+  "region_years": "Годы",
+  "region_week_starts": "Неделя начинается"
 }
