--- a/Jsons/language/sv.json
+++ b/Jsons/language/sv.json
@@ -14,34 +14,6 @@
   "lg_ja": "japanska",
   "lg_hi": "Hindi",
   "lg_zh": "kinesiska",
-  "unit_billion": "B",
-  "unit_million": "M",
-  "unit_thousand": "K",
-  "month_long01": "januari",
-  "month_long02": "februari",
-  "month_long03": "Mars",
-  "month_long04": "april",
-  "month_long05": "Maj",
-  "month_long06": "Juni",
-  "month_long07": "Juli",
-  "month_long08": "Augusti",
-  "month_long09": "september",
-  "month_long10": "oktober",
-  "month_long11": "november",
-  "month_long12": "December",
-  "month_short01": "Jan",
-  "month_short02": "februari",
-  "month_short03": "Mars",
-  "month_short04": "april",
-  "month_short05": "Maj",
-  "month_short06": "juni",
-  "month_short07": "Juli",
-  "month_short08": "Aug",
-  "month_short09": "Sep",
-  "month_short10": "okt",
-  "month_short11": "nov",
-  "month_short12": "dec",
-  "trello": "Trello",
   "source": "källa",
   "version": "version",
   "account_normal": "Vanligt konto",
@@ -60,11 +32,11 @@
   "database_show": "Visa databas",
   "load": "Lastpaneler och lådor",
   "cosmos_show": "Växla bakgrund",
-  "cat_science": "Vetenskap",
-  "cat_power": "Driva",
-  "cat_culture": "Kultur",
-  "cat_trade": "Handel",
   "cat_being": "Varelse",
+  "cat_culture": "Kultur",
+  "cat_power": "Driva",
+  "cat_science": "Vetenskap",
+  "cat_trade": "Handel",
   "settings": "Inställningar",
   "wikipedia": "Wikipedia",
   "toggle_wsbackgd": "Bakgrund",
@@ -93,6 +65,11 @@
   "cred_backend": "Molnguden:",
   "cred_wikipedia": "Wikipedia-trollkarlen: Sabat",
   "cred_project": "Mindfulness: Pierre",
+  "cred_sideral_guru": "Sideral Guru: Caro",
+  "settings_source": "Källa",
+  "settings_sources": "Källor",
+  "settings_academy": "Akademi",
+  "source_wikipedia_label": "Wikipedia",
   "source_baidubaike": "Baidu Baike",
   "source_britannica": "Britannica",
   "source_citizendium": "Citizenium",
@@ -121,7 +98,7 @@
   "cal_creationist": "Kreationist",
   "cal_gregorian_explanation": "Solkalender, 12 månader, 365-366 dagar, introducerad av påven Gregorius XIII år 1582.",
   "cal_islamic_explanation": "Månkalendern, 12 månader, 354-355 dagar, börjar med Muhammeds migration till Medina (622 e.Kr.).",
-  "cal_chinese_explanation": "Lunisolarkalender, kombinerar månmånader, solår och 12-åriga zodiakcykeln för djuren. Används för traditionella östasiatiska festivaler.",
+  "cal_chinese_explanation": "Lunisolarkalender, kombinerar månmånader, solår och 12-åriga zodiakcykel för djur. Används för traditionella östasiatiska festivaler.",
   "cal_persian_explanation": "Solkalendern, 365-366 dagar, börjar vid vårdagjämningen (Nowruz).",
   "cal_balinese_explanation": "Kalendersystem som kombinerar samtidiga cykler, inklusive en 210-dagars Pawukon-kalender. Används för religiösa ceremonier.",
   "cal_hebrew_explanation": "Lunisolarkalendern, 12–13 månader, börjar vid skapelsen (3761 f.Kr.). Används för religiösa högtider.",
@@ -332,5 +309,27 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "account_login": "Inloggning",
+  "account_email": "E-post",
+  "account_email_placeholder": "Ange din e-postadress",
+  "account_password": "Lösenord",
+  "account_password_placeholder": "Ange ditt lösenord",
+  "account_login_not_implemented": "Inloggningsfunktionen är ännu inte implementerad",
+  "account_password_reset_not_implemented": "Funktionen för återställning av lösenord är ännu inte implementerad",
+  "account_forgot_password": "Glömt lösenordet?",
+  "settings_parameters": "Parametrar",
+  "settings_time": "Tid",
+  "settings_timeviews": "Tidsvyer",
+  "settings_timeline": "Tidslinje",
+  "settings_timeline_size": "Storlek",
+  "settings_categories": "Kategorier",
+  "settings_categories_all": "Alla",
+  "settings_region": "Område",
+  "settings_region_system": "system",
+  "settings_region_custom": "beställnings-",
+  "region_date": "Datum",
+  "region_numbers": "Tal",
+  "region_years": "År",
+  "region_week_starts": "Veckan börjar"
 }
