--- a/Jsons/language/uk.json
+++ b/Jsons/language/uk.json
@@ -14,34 +14,6 @@
   "lg_ja": "Японська",
   "lg_hi": "Гінді",
   "lg_zh": "Гінді",
-  "unit_billion": "д",
-  "unit_million": "н",
-  "unit_thousand": "т",
-  "month_long01": "Січень",
-  "month_long02": "Лютий",
-  "month_long03": "Березень",
-  "month_long04": "Квітень",
-  "month_long05": "Травень",
-  "month_long06": "Червень",
-  "month_long07": "Липень",
-  "month_long08": "Серпень",
-  "month_long09": "Вересень",
-  "month_long10": "Жовтень",
-  "month_long11": "Листопад",
-  "month_long12": "Грудень",
-  "month_short01": "Січ",
-  "month_short02": "Лютий",
-  "month_short03": "Бер",
-  "month_short04": "Квітень",
-  "month_short05": "Травень",
-  "month_short06": "Червень",
-  "month_short07": "Липень",
-  "month_short08": "Серпень",
-  "month_short09": "Вересень",
-  "month_short10": "Жовтень",
-  "month_short11": "Листопад",
-  "month_short12": "Грудень",
-  "trello": "Trello",
   "source": "джерело",
   "version": "версія",
   "account_normal": "Звичайний акаунт",
@@ -60,11 +32,11 @@
   "database_show": "Показати базу даних",
   "load": "Завантажити панелі та блоки",
   "cosmos_show": "Перемкнути фон",
-  "cat_science": "Наука",
-  "cat_power": "Влада",
-  "cat_culture": "Культура",
-  "cat_trade": "Торгівля",
   "cat_being": "Буття",
+  "cat_culture": "Культура",
+  "cat_power": "Влада",
+  "cat_science": "Наука",
+  "cat_trade": "Торгівля",
   "settings": "Налаштування",
   "wikipedia": "Вікіпедія",
   "toggle_wsbackgd": "Фон",
@@ -93,6 +65,11 @@
   "cred_backend": "Бог хмар:",
   "cred_wikipedia": "Чарівник Вікіпедії: Сабат",
   "cred_project": "Усвідомленість: П'єр",
+  "cred_sideral_guru": "Зоряний Гуру: Каро",
+  "settings_source": "Джерело",
+  "settings_sources": "Джерела",
+  "settings_academy": "Академія",
+  "source_wikipedia_label": "Вікіпедія",
   "source_baidubaike": "Байду Байке",
   "source_britannica": "Британніка",
   "source_citizendium": "Громадянин",
@@ -126,7 +103,7 @@
   "cal_balinese_explanation": "Календарна система, що поєднує одночасні цикли, включаючи 210-денний календар Павукон. Використовується для релігійних церемоній.",
   "cal_hebrew_explanation": "Місячно-сонячний календар, 12-13 місяців, починається з моменту створення світу (3761 р. до н. е.). Використовується для релігійних обрядів.",
   "cal_ethiopian_explanation": "Сонячний календар, 13 місяців (12 з 30 днів та 1 з 5-6 днів), на 7-8 років відстає від григоріанського календаря.",
-  "cal_creationist_explanation": "Хронологічна основа, розраховує вік Землі на основі біблійних генеалогій, відносячи створення світу до часу 6000-10 000 років тому.",
+  "cal_creationist_explanation": "Хронологічна основа, розраховує вік Землі на основі біблійних генеалогій, розміщуючи створення світу 6000-10 000 років тому.",
   "cal_gregorian_usage": "Використання: 95% (офіційне) – Використовується як цивільний календар майже в кожній країні для офіційних та економічних цілей.",
   "cal_islamic_usage": "Використання: 24% (релігійне) – святкується приблизно 2 мільярдами мусульман (~24% світу), переважно на релігійні свята (Рамадан, Хадж тощо).",
   "cal_chinese_usage": "Використання: 18% (культурне) – святкують ~1,4 мільярда китайців під час таких свят, як Місячний Новий рік.",
@@ -332,5 +309,27 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "account_login": "Вхід",
+  "account_email": "Електронна пошта",
+  "account_email_placeholder": "Введіть свою електронну адресу",
+  "account_password": "Пароль",
+  "account_password_placeholder": "Введіть свій пароль",
+  "account_login_not_implemented": "Функція входу ще не реалізована",
+  "account_password_reset_not_implemented": "Функція скидання пароля ще не реалізована",
+  "account_forgot_password": "Забули пароль?",
+  "settings_parameters": "Параметри",
+  "settings_time": "Час",
+  "settings_timeviews": "Часові перегляди",
+  "settings_timeline": "Хронологія",
+  "settings_timeline_size": "Розмір",
+  "settings_categories": "Категорії",
+  "settings_categories_all": "Усі",
+  "settings_region": "Регіон",
+  "settings_region_system": "система",
+  "settings_region_custom": "звичай",
+  "region_date": "Дата",
+  "region_numbers": "Числа",
+  "region_years": "Роки",
+  "region_week_starts": "Початок тижня"
 }
