--- a/Jsons/language/de.json
+++ b/Jsons/language/de.json
@@ -14,34 +14,6 @@
   "lg_ja": "japanisch",
   "lg_hi": "Hindi",
   "lg_zh": "chinesisch",
-  "unit_billion": "Md",
-  "unit_million": "M",
-  "unit_thousand": "k",
-  "month_long01": "Januar",
-  "month_long02": "Februar",
-  "month_long03": "Marsch",
-  "month_long04": "April",
-  "month_long05": "Mai",
-  "month_long06": "Juni",
-  "month_long07": "Juli",
-  "month_long08": "August",
-  "month_long09": "September",
-  "month_long10": "Oktober",
-  "month_long11": "November",
-  "month_long12": "Dezember",
-  "month_short01": "Januar",
-  "month_short02": "Februar",
-  "month_short03": "Beschädigen",
-  "month_short04": "April",
-  "month_short05": "Mai",
-  "month_short06": "Juni",
-  "month_short07": "Jul",
-  "month_short08": "August",
-  "month_short09": "September",
-  "month_short10": "Oktober",
-  "month_short11": "November",
-  "month_short12": "Dezember",
-  "trello": "Trello",
   "source": "Quelle",
   "version": "Version",
   "account_normal": "Normales Konto",
@@ -58,13 +30,13 @@
   "timeview_save": "Zeitansicht speichern",
   "catalogs_show": "Kataloge",
   "database_show": "Datenbank anzeigen",
-  "load": "Lastpaneele und -kästen",
+  "load": "Lastverteiler und -kästen",
   "cosmos_show": "Hintergrund umschalten",
-  "cat_science": "Wissenschaft",
-  "cat_power": "Leistung",
-  "cat_culture": "Kultur",
-  "cat_trade": "Handel",
   "cat_being": "Sein",
+  "cat_culture": "Kultur",
+  "cat_power": "Leistung",
+  "cat_science": "Wissenschaft",
+  "cat_trade": "Handel",
   "settings": "Einstellungen",
   "wikipedia": "Wikipedia",
   "toggle_wsbackgd": "Hintergrund",
@@ -93,6 +65,11 @@
   "cred_backend": "Wolkengott:",
   "cred_wikipedia": "Wikipedia-Zauberer: Sabat",
   "cred_project": "Achtsamkeit: Pierre",
+  "cred_sideral_guru": "Sideral Guru: Caro",
+  "settings_source": "Quelle",
+  "settings_sources": "Quellen",
+  "settings_academy": "Akademie",
+  "source_wikipedia_label": "Wikipedia",
   "source_baidubaike": "Baidu Baike",
   "source_britannica": "Britannica",
   "source_citizendium": "Bürgerschaft",
@@ -332,5 +309,27 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "account_login": "Login",
+  "account_email": "E-Mail",
+  "account_email_placeholder": "Geben Sie Ihre E-Mail-Adresse ein",
+  "account_password": "Passwort",
+  "account_password_placeholder": "Geben Sie Ihr Passwort ein",
+  "account_login_not_implemented": "Die Anmeldefunktion ist noch nicht implementiert.",
+  "account_password_reset_not_implemented": "Die Funktion zum Zurücksetzen des Passworts ist noch nicht implementiert.",
+  "account_forgot_password": "Passwort vergessen?",
+  "settings_parameters": "Parameter",
+  "settings_time": "Zeit",
+  "settings_timeviews": "Zeitansichten",
+  "settings_timeline": "Zeitleiste",
+  "settings_timeline_size": "Größe",
+  "settings_categories": "Kategorien",
+  "settings_categories_all": "Alle",
+  "settings_region": "Region",
+  "settings_region_system": "System",
+  "settings_region_custom": "Brauch",
+  "region_date": "Datum",
+  "region_numbers": "Zahlen",
+  "region_years": "Jahre",
+  "region_week_starts": "Die Woche beginnt"
 }
