--- a/Jsons/language/zh.json
+++ b/Jsons/language/zh.json
@@ -14,34 +14,6 @@
   "lg_ja": "日本人",
   "lg_hi": "印地语",
   "lg_zh": "中国人",
-  "unit_billion": "十",
-  "unit_million": "百",
-  "unit_thousand": "千",
-  "month_long01": "一月",
-  "month_long02": "二月",
-  "month_long03": "行进",
-  "month_long04": "四月",
-  "month_long05": "可能",
-  "month_long06": "六月",
-  "month_long07": "七月",
-  "month_long08": "八月",
-  "month_long09": "九月",
-  "month_long10": "十月",
-  "month_long11": "十一月",
-  "month_long12": "十二月",
-  "month_short01": "千",
-  "month_short02": "一月",
-  "month_short03": "二月",
-  "month_short04": "行进",
-  "month_short05": "四月",
-  "month_short06": "可能",
-  "month_short07": "六月",
-  "month_short08": "七月",
-  "month_short09": "八月",
-  "month_short10": "九月",
-  "month_short11": "十月",
-  "month_short12": "十一月",
-  "trello": "Trello",
   "source": "来源",
   "version": "版本",
   "account_normal": "正常账户",
@@ -60,11 +32,11 @@
   "database_show": "显示数据库",
   "load": "配电盘和配电箱",
   "cosmos_show": "切换背景",
-  "cat_science": "科学",
-  "cat_power": "力量",
-  "cat_culture": "文化",
-  "cat_trade": "贸易",
   "cat_being": "存在",
+  "cat_culture": "文化",
+  "cat_power": "力量",
+  "cat_science": "科学",
+  "cat_trade": "贸易",
   "settings": "设置",
   "wikipedia": "维基百科",
   "toggle_wsbackgd": "背景",
@@ -93,6 +65,11 @@
   "cred_backend": "云神：",
   "cred_wikipedia": "维基百科向导：萨巴特",
   "cred_project": "正念：皮埃尔",
+  "cred_sideral_guru": "星光大师：卡罗",
+  "settings_source": "来源",
+  "settings_sources": "来源",
+  "settings_academy": "学院",
+  "source_wikipedia_label": "维基百科",
   "source_baidubaike": "百度百科",
   "source_britannica": "大英百科全书",
   "source_citizendium": "公民学院",
@@ -332,5 +309,27 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "account_login": "登录",
+  "account_email": "电子邮件",
+  "account_email_placeholder": "请输入您的电子邮件地址",
+  "account_password": "密码",
+  "account_password_placeholder": "请输入您的密码",
+  "account_login_not_implemented": "登录功能尚未实现",
+  "account_password_reset_not_implemented": "密码重置功能尚未实现",
+  "account_forgot_password": "忘记密码？",
+  "settings_parameters": "参数",
+  "settings_time": "时间",
+  "settings_timeviews": "时间视图",
+  "settings_timeline": "时间线",
+  "settings_timeline_size": "尺寸",
+  "settings_categories": "类别",
+  "settings_categories_all": "全部",
+  "settings_region": "地区",
+  "settings_region_system": "系统",
+  "settings_region_custom": "风俗",
+  "region_date": "日期",
+  "region_numbers": "数字",
+  "region_years": "年",
+  "region_week_starts": "一周开始"
 }
